@startuml
class Housekeeping_book {
 booking: ArrayList<entries>
}
class collection_balance_sheet {
  int income;
  int expence
  int end_balance
}
class entries {
  String title
  String typ
  int amount
  String datum
}

Housekeeping_book <|-- entries
Housekeeping_book <|-- collection_balance_sheet
@enduml